// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HierarchicalTrackSelector drawer widget renders with a couple of categorized tracks 1`] = `
<div
  class="HierarchicalTrackSelector-root-1"
  data-testid="hierarchical_track_selector"
>
  <div
    class="MuiFormControl-root MuiTextField-root HierarchicalTrackSelector-searchBox-2 MuiFormControl-fullWidth"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
      data-shrink="false"
    >
      Filter Tracks
    </label>
    <div
      class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedEnd"
    >
      <input
        aria-invalid="false"
        class="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedEnd"
        type="text"
        value=""
      />
      <div
        class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <span
              aria-hidden="true"
              class="material-icons MuiIcon-root"
            >
              clear
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    
  </div>
  <div
    class="MuiFormGroup-root"
  />
  <div
    class="MuiPaper-root MuiPaper-elevation1 MuiExpansionPanel-root Mui-expanded MuiExpansionPanel-rounded MuiPaper-rounded"
    style="margin-top: 4px;"
  >
    <div
      aria-disabled="false"
      aria-expanded="true"
      class="MuiButtonBase-root MuiExpansionPanelSummary-root Category-root-180 Mui-expanded Category-expanded-181"
      role="button"
      tabindex="0"
    >
      <div
        class="MuiExpansionPanelSummary-content Category-content-179 Mui-expanded Category-expanded-181"
      >
        <span
          class="MuiTypography-root MuiTypography-button"
        >
          Foo Category (2)
        </span>
      </div>
      <div
        aria-disabled="false"
        aria-hidden="true"
        class="MuiButtonBase-root MuiIconButton-root MuiExpansionPanelSummary-expandIcon Mui-expanded Category-expanded-181 MuiIconButton-edgeEnd"
        role="button"
        tabindex="-1"
      >
        <span
          class="MuiIconButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root"
          >
            expand_more
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </div>
    </div>
    <div
      class="MuiCollapse-container MuiCollapse-entered"
      style="min-height: 0px;"
    >
      <div
        class="MuiCollapse-wrapper"
      >
        <div
          class="MuiCollapse-wrapperInner"
        >
          <div
            role="region"
          >
            <div
              class="MuiExpansionPanelDetails-root Category-expansionPanelDetails-178"
            >
              <div
                class="MuiFormGroup-root"
              >
                <div
                  class="TrackEntry-track-113"
                  style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
                >
                  <label
                    class="MuiFormControlLabel-root TrackEntry-formControlLabel-111"
                    title=""
                  >
                    <span
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-135 MuiCheckbox-root MuiCheckbox-colorSecondary TrackEntry-checkbox-112 PrivateSwitchBase-checked-136 Mui-checked MuiIconButton-colorSecondary"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          role="presentation"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                          />
                        </svg>
                        <input
                          checked=""
                          class="PrivateSwitchBase-input-138"
                          data-indeterminate="false"
                          data-testid="fooC"
                          type="checkbox"
                          value=""
                        />
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </span>
                    <span
                      class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                    >
                      Track
                    </span>
                  </label>
                  <button
                    class="MuiButtonBase-root MuiIconButton-root TrackEntry-configureButton-114"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <span
                        aria-hidden="true"
                        class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
                      >
                        settings
                      </span>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </div>
              <div
                class="MuiPaper-root MuiPaper-elevation1 MuiExpansionPanel-root Mui-expanded MuiExpansionPanel-rounded MuiPaper-rounded"
                style="margin-top: 4px;"
              >
                <div
                  aria-disabled="false"
                  aria-expanded="true"
                  class="MuiButtonBase-root MuiExpansionPanelSummary-root Category-root-180 Mui-expanded Category-expanded-181"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiExpansionPanelSummary-content Category-content-179 Mui-expanded Category-expanded-181"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-button"
                    >
                      Bar Category (1)
                    </span>
                  </div>
                  <div
                    aria-disabled="false"
                    aria-hidden="true"
                    class="MuiButtonBase-root MuiIconButton-root MuiExpansionPanelSummary-expandIcon Mui-expanded Category-expanded-181 MuiIconButton-edgeEnd"
                    role="button"
                    tabindex="-1"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <span
                        aria-hidden="true"
                        class="material-icons MuiIcon-root"
                      >
                        expand_more
                      </span>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </div>
                </div>
                <div
                  class="MuiCollapse-container MuiCollapse-entered"
                  style="min-height: 0px;"
                >
                  <div
                    class="MuiCollapse-wrapper"
                  >
                    <div
                      class="MuiCollapse-wrapperInner"
                    >
                      <div
                        role="region"
                      >
                        <div
                          class="MuiExpansionPanelDetails-root Category-expansionPanelDetails-178"
                        >
                          <div
                            class="MuiFormGroup-root"
                          >
                            <div
                              class="TrackEntry-track-113"
                              style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
                            >
                              <label
                                class="MuiFormControlLabel-root TrackEntry-formControlLabel-111"
                                title=""
                              >
                                <span
                                  aria-disabled="false"
                                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-135 MuiCheckbox-root MuiCheckbox-colorSecondary TrackEntry-checkbox-112 PrivateSwitchBase-checked-136 Mui-checked MuiIconButton-colorSecondary"
                                >
                                  <span
                                    class="MuiIconButton-label"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      class="MuiSvgIcon-root"
                                      focusable="false"
                                      role="presentation"
                                      viewBox="0 0 24 24"
                                    >
                                      <path
                                        d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                                      />
                                    </svg>
                                    <input
                                      checked=""
                                      class="PrivateSwitchBase-input-138"
                                      data-indeterminate="false"
                                      data-testid="barC"
                                      type="checkbox"
                                      value=""
                                    />
                                  </span>
                                  <span
                                    class="MuiTouchRipple-root"
                                  />
                                </span>
                                <span
                                  class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                                >
                                  Track
                                </span>
                              </label>
                              <button
                                class="MuiButtonBase-root MuiIconButton-root TrackEntry-configureButton-114"
                                tabindex="0"
                                type="button"
                              >
                                <span
                                  class="MuiIconButton-label"
                                >
                                  <span
                                    aria-hidden="true"
                                    class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
                                  >
                                    settings
                                  </span>
                                </span>
                                <span
                                  class="MuiTouchRipple-root"
                                />
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    class="MuiButtonBase-root MuiFab-root HierarchicalTrackSelector-fab-3 MuiFab-secondary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiFab-label"
    >
      <span
        aria-hidden="true"
        class="material-icons MuiIcon-root"
      >
        add
      </span>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`HierarchicalTrackSelector drawer widget renders with a couple of uncategorized tracks 1`] = `
<div
  class="HierarchicalTrackSelector-root-1"
  data-testid="hierarchical_track_selector"
>
  <div
    class="MuiFormControl-root MuiTextField-root HierarchicalTrackSelector-searchBox-2 MuiFormControl-fullWidth"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
      data-shrink="false"
    >
      Filter Tracks
    </label>
    <div
      class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedEnd"
    >
      <input
        aria-invalid="false"
        class="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedEnd"
        type="text"
        value=""
      />
      <div
        class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <span
              aria-hidden="true"
              class="material-icons MuiIcon-root"
            >
              clear
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    
  </div>
  <div
    class="MuiFormGroup-root"
  >
    <div
      class="TrackEntry-track-113"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    >
      <label
        class="MuiFormControlLabel-root TrackEntry-formControlLabel-111"
        title=""
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-135 MuiCheckbox-root MuiCheckbox-colorSecondary TrackEntry-checkbox-112 PrivateSwitchBase-checked-136 Mui-checked MuiIconButton-colorSecondary"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
              />
            </svg>
            <input
              checked=""
              class="PrivateSwitchBase-input-138"
              data-indeterminate="false"
              data-testid="fooC"
              type="checkbox"
              value=""
            />
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
        <span
          class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
        >
          Track
        </span>
      </label>
      <button
        class="MuiButtonBase-root MuiIconButton-root TrackEntry-configureButton-114"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
          >
            settings
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
    <div
      class="TrackEntry-track-113"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    >
      <label
        class="MuiFormControlLabel-root TrackEntry-formControlLabel-111"
        title=""
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-135 MuiCheckbox-root MuiCheckbox-colorSecondary TrackEntry-checkbox-112 PrivateSwitchBase-checked-136 Mui-checked MuiIconButton-colorSecondary"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
              />
            </svg>
            <input
              checked=""
              class="PrivateSwitchBase-input-138"
              data-indeterminate="false"
              data-testid="barC"
              type="checkbox"
              value=""
            />
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
        <span
          class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
        >
          Track
        </span>
      </label>
      <button
        class="MuiButtonBase-root MuiIconButton-root TrackEntry-configureButton-114"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
          >
            settings
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
  <button
    class="MuiButtonBase-root MuiFab-root HierarchicalTrackSelector-fab-3 MuiFab-secondary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiFab-label"
    >
      <span
        aria-hidden="true"
        class="material-icons MuiIcon-root"
      >
        add
      </span>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`HierarchicalTrackSelector drawer widget renders with just the required model elements 1`] = `
<div
  class="HierarchicalTrackSelector-root-1"
  data-testid="hierarchical_track_selector"
>
  <div
    class="MuiFormControl-root MuiTextField-root HierarchicalTrackSelector-searchBox-2 MuiFormControl-fullWidth"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
      data-shrink="false"
    >
      Filter Tracks
    </label>
    <div
      class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedEnd"
    >
      <input
        aria-invalid="false"
        class="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedEnd"
        type="text"
        value=""
      />
      <div
        class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <span
              aria-hidden="true"
              class="material-icons MuiIcon-root"
            >
              clear
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    
  </div>
  <div
    class="MuiFormGroup-root"
  />
  <button
    class="MuiButtonBase-root MuiFab-root HierarchicalTrackSelector-fab-3 MuiFab-secondary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiFab-label"
    >
      <span
        aria-hidden="true"
        class="material-icons MuiIcon-root"
      >
        add
      </span>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;
